fix: adjust margin for improved spacing in index page description

--- a/components/custom.module.css
+++ b/components/custom.module.css
@@ -4,7 +4,7 @@
   font-weight: 700;
   letter-spacing: -0.12rem;
   /* margin-left: -0.2rem; */
-  margin-top: 0.5rem;
+  margin-top: 2rem;
   /* line-height: 1.25; */
   background-image: linear-gradient(146deg, #000, #757a7d);
   -webkit-background-clip: text;
